@startuml core-classes

class EventLog {
    id: int
    created_at: datetime
    updated_at: datetime
    file_name: str
    saved_name: str
    df_name: str
    training_df_name: str
    simulation_df_name: str
    definition: Definition
}

class Definition {
    id: int
    created_at: datetime
    updated_at: datetime
    columns_definition: dict[str, str]
    outcome_definition: list[list[dict[str, datetime | float | int | str]]]
    treatment_definition: list[list[dict[str, datetime | float | int | str]]]
    fast_mode: bool
    start_transition: str
    end_transition: str
}

class Project {
    id: int
    created_at: datetime
    updated_at: datetime
    name: str
    description: str
    status: str
    selected_plugins: list[str]
    event_log: EventLog
    cases: list[Case]
    events: list[Event]
    plugins: list[Plugin]
}

class Case{
    id: int
    case_identifier: str
    status: str
    events: list[Event]
}

class Event{
    id: int
    date: datetime
    activity: str
    attributes: dict
    case: Case
}

class Plugin {
    id: int
    name: str
    prescription_type: str
    description: str
    parameters: dict[str, str | bool | int | float]
    status: str
    model_name: str
    project: Project
}

EventLog "1" -- "1" Definition
Project "1" -- "1" EventLog
Project "1" -- "n" Case
Project "1" -- "n" Event
Case "1" -- "n" Event
Project "1" -- "n" Plugin

@enduml
